hphp/test/zend/bad/Zend/tests/errmsg_033.php
<?php

class test {

	static function __destruct() {
	}
}

echo "Done\n";
?>